# BridgePRAG

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: bridgeprag_evaluation_metrics_table.csv
bridgeprag/: __init__.py  cli.py  config.py  data.py  memory.py  runtime.py  trainer.py
docs/: method.md  reproducing.md
examples/: minimal_inference.py  train_toy_memory.py
examples/data/: tiny_memory.jsonl
scripts/: reproduce_toy.sh
tests/: test_data.py  test_memory_shapes.py
