[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgeprag"
version = "0.1.0"
description = "Question-conditioned HyperKV memory for decoder-only retrieval-augmented generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SeungMin2001" }]
keywords = [
  "rag",
  "retrieval-augmented-generation",
  "mergeprag",
  "fid",
  "fusion-in-decoder",
  "kv-cache",
  "hypernetwork",
  "llm-memory",
  "pytorch",
  "transformers",
]
dependencies = [
  "torch>=2.2",
  "transformers>=4.45",
  "accelerate>=0.33",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
bridgeprag = "bridgeprag.cli:main"

[tool.setuptools.packages.find]
include = ["bridgeprag*"]

[tool.ruff]
line-length = 110
target-version = "py310"

